--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Snowflake is an attempt to cut away all the nice features of rich MVC frameworks
 
 Snowflake uses an internal web server, based on the simple, built in HTTP server in Java 6. This gives short startup time and it eliminates the need for XML config files. Snowflake has been designed to make it possible to write a "SnowflakeServlet" that could make us able to run our Snowflake based application on a Java EE container.
 
-We're inspired by Ruby on Rails, Python Django and we have tried to avoid being influenced by the ideas behind MVC frameworks like Struts, Spring MVC and Wicket. Not because we don't like them, but rather because we'd like to see what happens if we move in another direction.
+We're inspired by Ruby on Rails and Python Django. We've tried to avoid being influenced by MVC frameworks like Struts, Spring MVC and Wicket. Not because we don't like them, but rather because we'd like to see what happens if we move in another direction.
 
 To get started using Snowflake, take a look at the example application called "shoppingassistant". Also, try to write "help" in the console once you started up the application.
 
