--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Snowflake Minimalistic Java MVC
 -------------------------------
 Some of us are stuck with Java, for good or bad reasons. Writing web applications with the Java EE standards can be tedious and requires a lot of paradigm shifting. From Java code to XML to JSP and back to Java. Et cetera.
 
-Snowflake is an attempt to cut away all the nice features of rich MVC frameworks. Instead we want to make it as easy as possible to get you in to, and keep you in the flow that makes you produce lean, business rescue software. 
+Snowflake is an attempt to cut away all the nice features of rich MVC frameworks. Instead we want to make it as easy as possible to get you in to, and keep you in high productivity flow. At the end of the day, we would like you to tell us that we made a small contribution to your successful implementation of business rescuing software. The lean way.
 
 The first version of Snowflake is still under development, but basic functionality is up and running. Now we need users that can provide us with feedback: To bring Snowflake forward we are completely dependent on learning from your experiences with using the framework. 
 
