--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Snowflake is an attempt to cut away all the nice features of rich MVC frameworks
 
 The first version of Snowflake is still under development, but basic functionality is up and running. Now we need users that can provide us with feedback: To bring Snowflake forward we are completely dependent on learning from your experiences with using the framework. 
 
-Snowflake uses an internal web server, based on the simple, built in HTTP server in Java 6. This gives short startup time and it eliminates the need for XML config files. Snowflake has been designed to make it possible to write a "SnowflakeServlet" that in the future would make it possible to run Snowflake based applications on a Java Web container such as Jetty, Tomcat or JBoss.
+Snowflake uses an internal web server, based on the simple, built in HTTP server in Java 6. This gives short startup time and it eliminates the need for XML config files. Snowflake has been designed to make it possible to write a "SnowflakeServlet" that in the future would make it possible to put Snowflake based applications into production on Java Web containers such as Jetty, Tomcat or JBoss.
 
 We're inspired by Ruby on Rails and Python Django. We've tried to avoid being influenced by MVC frameworks like Struts, Spring MVC and Wicket. Not because we don't like them, but rather because we'd like to see what happens if we move in another direction.
 
