--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 Snowflake Minimalistic Java MVC
 -------------------------------
+For more elaborate information about using Snowflake, please consult the wiki:
+http://wiki.github.com/haugeto/Snowflake/
+
 Some of us are stuck with Java, for good or bad reasons. Writing web applications with the Java EE standards can be tedious and requires a lot of paradigm shifting. From Java code to XML to JSP and back to Java. Et cetera.
 
 Snowflake is an attempt to cut away all the nice features of rich MVC frameworks. Instead we want to make it as easy as possible to get you in to, and keep you in high productivity flow. At the end of the day, we would like you to tell us that we made a small contribution to your successful implementation of business rescuing software. The lean way.
